[package]
name = "vpn-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full"] }
tonic = { version = "0.11", features = ["prost"] }
prost = "0.12"
prost-types = "0.12"
tracing = "0.1"
tracing-subscriber =  { version = "0.3.1", features = ["tracing-log", "env-filter"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.11"
